--- a/PoolGames/app/src/main/AndroidManifest.xml
+++ b/PoolGames/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:name=".ContentManager"
         android:allowBackup="true"
-        android:icon="@drawable/rack_setup"
+        android:icon="@drawable/normal_rack"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
